--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -31,5 +31,6 @@ jobs:
           MERGE_COMMIT_MESSAGE: "pull-request-title"
           MERGE_RETRIES: "6"
           MERGE_RETRY_SLEEP: "10000"
+          MERGE_FORKS: "true"
           UPDATE_LABELS: ""
           UPDATE_METHOD: "rebase"
